@@ -1,4 +1,9 @@
 2007-02-15  Benhur Stein <benhur@inf.ufsm.br>
+        * PajeSimulator/SimulContainer: remove missing chunk notif;
+          PajeSimulator/UserLink: better comparision of matching links,
+          should work when re-simulating
+
+2007-02-15  Benhur Stein <benhur@inf.ufsm.br>
         * PajeSimulator/SimulChunk: cope with changes in EntityChunk;
           remove aggregation subclasses;
           test for indexOfLastObject... returning NSNotFound
